# certus

./: .env.example  .env.testnet.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: determinism-ci.yml  determinism-test.yml
cli/: README.md  package.json
cli/src/: index.ts
contracts/: README.md  foundry.toml
contracts/src/: CertusBase.sol  CertusBisection.sol  CertusEscrow.sol  CertusInsurancePool.sol  CertusJobs.sol  CertusStylus.sol  CertusToken.sol  CertusVerifier.sol  CertusWasmProof.sol  IStylusExecutor.sol  StylusExecutorMultisig.sol
contracts/test/: CertusEscrow.t.sol  CertusSecurityTest.sol
demo/: .gitignore  README.md  package-lock.json  package.json
demo/coordinator/: server.js
demo/examples/: challenges.json
demo/executor/: node.js
demo/frontend/: package-lock.json  package.json
demo/frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
demo/python-cli/: Cargo.toml
demo/python-cli/src/: main.rs
demo/scripts/: launch.js  setup.ps1  setup.sh
demo/shared/: crypto.js  types.js
demo/verifier/: node.js
examples/: README.md
examples/analyzer/: Cargo.toml  README.md
examples/analyzer/src/: lib.rs
examples/verifiedpump/: README.md  package.json
examples/verifiedpump/contracts/: TokenTemplates.sol  VerifiedPumpFactory.sol
examples/verifiedpump/script/: DeployVerifiedPump.s.sol
node/: Cargo.toml  Dockerfile  README.md  build.gradle  build.sh  gradle.properties  settings.gradle
node/client/: README.md  build.gradle
node/client/src/main/java/net/certus/client/: CertusClient.java  EscrowClient.java
node/client/src/main/java/net/certus/crypto/: CertusHash.java  CertusKeys.java
node/client/src/main/java/net/certus/model/: ExecReceipt.java  JobSpec.java
node/common/: Cargo.toml
node/common/src/: contracts.rs  crypto.rs  lib.rs  types.rs
node/executor/: Cargo.toml  README.md  build.gradle  config.yml.example
node/executor/src/: executor.rs  main.rs  sandbox.rs
node/executor/src/main/java/net/certus/executor/: ExecutorNode.java
node/executor/src/main/java/net/certus/wasm/: WasmSandbox.java  WasmValidator.java
node/executor/src/test/java/net/certus/test/: DeterminismTest.java
node/proto/: README.md  build.gradle  certus.proto
node/proto/src/main/proto/: certus.proto
node/verifier/: Cargo.toml  README.md  build.gradle  config.yml
node/verifier/src/: main.rs  verifier.rs
node/verifier/src/main/java/net/certus/verifier/: VerifierNode.java
python-verifier/: Cargo.toml  README.md
python-verifier/src/: api.rs  certus_integration.rs  lib.rs  main.rs  python_compiler.rs  queue.rs  reliability.rs  tests.rs  validation.rs  verifier.rs  websocket.rs
python-verifier/src/compiler/: codegen.rs  ir.rs  lowering.rs  memory.rs  mod.rs
python-verifier/tests/: augmented_assignment_tests.rs  dict_tests.rs  execution_verification_tests.rs  list_tests.rs  off_chain_no_run_time_test.rs  sha256_tests.rs  str_conversion_tests.rs  string_tests.rs  subscript_assign_tests.rs  while_loop_tests.rs
scripts/: README.md  build-rust.sh  compile-test-wasm.sh  deploy.sh  docker-build.sh  run-nodes.sh  setup-env.sh  submit-job.sh  test-determinism.sh  verify-build.sh
stylus-executor/: .gitignore  Cargo.toml  Makefile  README.md
stylus-executor/src/: lib.rs  wasm_interpreter.rs
stylus-executor/tests/: integration.rs
testvectors/: README.md  add.wat  compile.sh  sha256.wat  test_vectors.json
testvectors/wasm/: echo.wat
