[workspace]
members = [
    "node/executor",
    "node/verifier",
    "node/common",
    "python-verifier",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Certus Network"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Ethereum
ethers = "2.0"

# WebAssembly
wasmtime = "15.0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
sha2 = "0.10"
ed25519-dalek = "2.1"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true