[workspace]
members = [
    "executor",
    "verifier",
    "common",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Certus Network"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = "2.0"
wasmtime = "15.0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"