[package]
name = "python-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "15.0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.40", features = ["full"] }
ethers = "2.0"
certus-common = { path = "../node/common" }
# Python parsing
rustpython-parser = "0.3"
# Wasm handling
wasm-encoder = "0.38"
wasmparser = "0.118"
# Wasm generation
bincode = "1.3"
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = "0.10"
log = "0.4"
sled = "0.34"
futures = "0.3"
rand = "0.8"

[build-dependencies]
cc = "1.0"