[package]
name = "certus-stylus-executor"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
stylus-sdk = "0.5"
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp"] }
alloy-sol-types = { version = "0.7", default-features = false }
wasmtime = { version = "15.0.1", optional = true }
sha2 = { version = "0.10", default-features = false }
hex-literal = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
std = ["alloy-primitives/std", "alloy-sol-types/std", "sha2/std"]
wasmtime-support = ["wasmtime"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["lib", "cdylib"]
