[package]
name = "certus-executor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "executor"
path = "src/main.rs"

[dependencies]
certus-common = { path = "../common" }
tokio = { workspace = true }
ethers = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }