[package]
name = "certus-verifier"
version.workspace = true
edition.workspace = true

[[bin]]
name = "verifier"
path = "src/main.rs"

[dependencies]
certus-common = { path = "../common" }
tokio = { workspace = true }
ethers = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }